--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -6,5 +6,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
